--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "ares",
   "version": "1.0.0",
   "description": "AWS Lambda API for storing Summoners War data",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "serverless deploy",
+    "start": "serverless offline start"
   },
   "author": "Ciaran Downey",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^5.1.0",
-    "serverless": "^1.28.0"
+    "serverless": "^1.28.0",
+    "serverless-offline": "^3.25.6"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bunyan": "^1.5.1",
     "express": "^4.16.3",
+    "node-yaml-config": "0.0.3",
     "serverless-http": "^1.6.0"
   }
 }
