--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bunyan": "^1.5.1",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "node-yaml-config": "0.0.3",
     "serverless-http": "^1.6.0"
