--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "serverless deploy",
+    "deploy": "npm run deploy:docs && serverless deploy",
+    "deploy:docs": "aws s3 sync ./docs s3://ares-www/docs",
     "start": "serverless offline start"
   },
   "author": "Ciaran Downey",
@@ -13,13 +14,17 @@
   "devDependencies": {
     "eslint": "^5.1.0",
     "serverless": "^1.28.0",
+    "serverless-finch": "^2.2.0",
     "serverless-offline": "^3.25.6"
   },
   "dependencies": {
+    "aws-xray-sdk": "^1.3.0",
     "body-parser": "^1.18.3",
     "bunyan": "^1.5.1",
+    "bunyan-express-serializer": "^1.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-request-id": "^1.4.0",
     "node-yaml-config": "0.0.3",
     "serverless-http": "^1.6.0"
   }
